package pattern.factorymethod.cutprint;

public interface Cuttable {
    
}
